--- a/january/1-2-17/snowfall.html
+++ b/january/1-2-17/snowfall.html
@@ -1,6 +1,8 @@
 <!-- snowfall taken from http://codepen.io/NickyCDK/pen/AIonk-->
+<!DOCTYPE>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="static/styles.css">
     </head>
     <body>
 
